--- a/AspMVCECommerce/Views/Home/ShoppingCart.cshtml
+++ b/AspMVCECommerce/Views/Home/ShoppingCart.cshtml
@@ -85,7 +85,7 @@
                                         </a>
                                     }
                                 </td>
-                                <td style="font-weight: 500; line-height: 62px;">
+                                <td class="td-product-name" style="font-weight: 500;width:350px;">
                                     @Html.DisplayFor(modelItem => item.Product.Name)
                                 </td>
                                 <td style="line-height: 62px;">
@@ -224,6 +224,20 @@
                 $('#cart-total').text('₱' + total.toLocaleString());
                 $('#cart-subtotal').text('₱' + total.toLocaleString());
 
+
+                $(".td-product-name").each(function (index) {
+                    /* var imageDefaultId = $(this).attr("image-id") + ".Default";*/
+
+                    let spanInnerText = $(this).html($(this).prop("innerText")).prop("innerText");
+                    $(this).html(spanInnerText);
+
+                    $(this).attr("title", spanInnerText);
+
+                    var len = $(this).text().trim().length;
+                    if (len > 100) {
+                        $(this).text($(this).text().substr(0, 100) + '...');
+                    }
+                });
             });
     </script>
 }
