--- a/AspMVCECommerce/Views/Home/WishList.cshtml
+++ b/AspMVCECommerce/Views/Home/WishList.cshtml
@@ -237,7 +237,8 @@
                                         <button class="add-to-wishlist" onclick="location.href='/Account/Login'"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
                                     }
 
-                                    <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
+                                    <button class="add-to-compare" onclick="location.href='/Home/compare?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory'"><i class="fa fa-exchange"></i><span class="tooltipp tooltipp2">compare with similar items</span></button>
+                                    @*<button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp tooltipp2">compare with similar items</span></button>*@
                                     @*<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>*@
 
                                     <button class="quick-view" onclick="location.href='/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory'"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
