--- a/AspMVCECommerce/Views/Shared/_SellerLayout.cshtml
+++ b/AspMVCECommerce/Views/Shared/_SellerLayout.cshtml
@@ -113,17 +113,17 @@
                             <div>
                                 <a href="#">
                                     <i class="fa fa-heart-o"></i>
-                                    <span>Your Wishlist</span>
-                                    <div class="qty">2</div>
+                                    <span>My Wishlist</span>
+                                    <div class="qty">0</div>
                                 </a>
                             </div>
                             <!-- /Wishlist -->
                             <!-- Cart -->
                             <div class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                                <a href="~/Account/Login">
                                     <i class="fa fa-shopping-cart"></i>
-                                    <span>Your Cart</span>
-                                    <div class="qty">3</div>
+                                    <span>My Cart</span>
+                                    <div class="qty" id="shopping-cart-items-count">0</div>
                                 </a>
                                 <div class="cart-dropdown">
                                     <div class="cart-list">
